Add case study pages

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
         <link href="static/plugin/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="static/plugin/font-awesome/css/all.min.css" rel="stylesheet">
         <link href="static/plugin/et-line/style.css" rel="stylesheet">
-        <link href="static/plugin/themify-icons/themify-icons.css" rel="stylesheet">
-        <link href="static/plugin/owl-carousel/css/owl.carousel.min.css" rel="stylesheet">
         <!-- theme css -->
         <link href="static/style/master.css" rel="stylesheet">
     </head>
@@ -44,8 +42,8 @@
                     
                     <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
                         <ul class="nav navbar-nav">
-                            <li><a class="nav-link" href="studies.html">Case Studies</a></li>
-                            <li><a class="nav-link" href="about.html">About</a></li>
+                            <li><a class="nav-link" href="static/pages/studies.html">Case Studies</a></li>
+                            <li><a class="nav-link" href="static/pages/about.html">About</a></li>
                         </ul>
                     </div>
                     <div class="extra-menu d-flex align-items-center">
@@ -60,17 +58,17 @@
 
         <!-- Main -->
         <main>
-            <!-- Home Banner -->
-            <section id="home" class="home-banner bg-cover bg-center bg-no-repeat" style="background-color: #fff">
+            <!-- Intro Banner -->
+            <section>
                 <div class="container">
                     <div class="row full-screen align-items-center p-100px-tb">
                         <div class="col-lg-8">
                             <div class="ht-box m-50px-t">
                                 <h6>Hi, I'm</h6>
                                 <h1 class="m-10px-b">Yichang Li</h1>
-                                <h2>A UX designer and a full-stack developer interested in interaction design, visual design and emerging technologies. Able to take ideas from concept to wireframe to prototype to production.</h2>
+                                <h4>A UX designer and a full-stack developer interested in interaction design, visual design and emerging technologies. I work from a lifelong love for design + tech, and a resolute desire to do something good.</h4>
                                 <div class="p-30px-t">
-                                    <a class="m-btn m-btn-radius m-btn-theme" href="#">Download CV</a>
+                                    <a class="m-btn m-btn-radius m-btn-theme" href="CV_Yichang.pdf">Download CV</a>
                                 </div>
                             </div>
                         </div>
@@ -80,26 +78,91 @@
                     </div>
                 </div>
             </section>
-            <!-- End Home Banner -->
+            <!-- End Intro Banner -->
 
             <!-- Design Overview -->
-            <section id="design-overview">
-                <div class="row">
-                    <div class="offset-lg-1 col-lg-8">
-                        <div class="work-thumbnail">
-                            <img src="static/img/esplanade.png">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-9">
+                            <div class="work-thumbnail">
+                                <a href="static/pages/esplanade.html">
+                                    <img src="static/img/esplanade.png">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="offset-lg-7 col-lg-5">
+                            <a href="static/pages/esplanade.html">
+                                <div class="project-blurb">
+                                    <h3>Esplanade Website</h3>
+                                    <small>Concept · UI/UX Design</small>
+                                    <p>Redesigned the Information Architecture and key pages layout of Esplanade website.</p>
+                                    <div class="d-flex flex-row-reverse">
+                                        <div class="m-btn-link"> Read Case Study <i class="fas fa-chevron-right"></i> </div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                    <div class="offset-lg-6 col-lg-6">
-                        <div class="project-blurb">
-                            <h3>Esplanade Website</h3>
-                            <p>Redesigning the national theatre of Singapore to better serve its purpose.</p>
-                            <small>Concept Project · UI/UX Design</small>
+                    <div class="row m-50px-t">
+                        <div class="col-lg-9">
+                            <div class="work-thumbnail">
+                                <a href="static/pages/twofeet.html">
+                                    <img src="static/img/twofee.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="offset-lg-7 col-lg-5">
+                            <a href="static/pages/twofeet.html">
+                                <div class="project-blurb">
+                                    <h3>TwoFeet</h3>
+                                    <small>Concept · Product Design</small>
+                                    <p>A digital travel guide service for tourists to tailor the travel experience based on their interests and to provide timely information.</p>
+                                    <div class="d-flex flex-row-reverse">
+                                        <div class="m-btn-link"> Read Case Study <i class="fas fa-chevron-right"></i> </div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- End work -->
+            <!-- Previous Jobs -->
+            <section>
+                <h2 class="text-center">Other Projects</h2>
+                <div class="container">
+                    <div class="row">
+                        <!-- feaure box -->
+                        <div class="col-sm-6 col-lg-4 m-15px-tb">
+                            <div class="feature-box-3">
+                                <div class="icon">
+                                    <i class="icon-desktop"></i>
+                                </div>
+                                <div class="feature-content">
+                                    <h5>Design System (Component Libraries)</h5>
+                                    <p>I led the <a href="" >CSS</a> and <a href="">React</a> component libraries development in ZALORA.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- / -->
+                        <!-- feaure box -->
+                        <div class="col-sm-6 col-lg-4 m-15px-tb">
+                            <div class="feature-box-3">
+                                <div class="icon">
+                                    <i class="icon-pricetags"></i>
+                                </div>
+                                <div class="feature-content">
+                                    <h5>Design System (Design & Documentation)</h5>
+                                    <p>Designed and implemented the portal for ZALORA/styleguide. I am also the main contributor of the guides for <a href="">grid system</a>, <a href="" >typography</a>, and <a href="">color</a>.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- / -->
+                    </div>
+                </div>
+            </section>
+            <!-- End Previous Jobs-->
 
         </main>
         <!-- main end -->
