--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -35,7 +35,7 @@
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a href="#">
+                        <a href="/">
                             <img src="static/img/logo.svg" alt="Yichang">
                         </a>
                     </div>
