add esplanade case study

--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -36,7 +36,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a href="/">
-                            <img src="static/img/logo.svg" alt="Yichang">
+                            <img src="static/img/logo.svg" alt="Yichang">Yichang
                         </a>
                     </div>
                     
