update case study for zalora styleguide

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 A experience designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
                             </div>
                             <div class="p-2rem-tb">
-                                <a class="m-btn m-btn-radius m-btn-theme" href="CV_Yichang.pdf">Download CV</a>
+                                <a class="m-btn m-btn-radius m-btn-theme" href="/CV_Yichang.pdf">Download CV</a>
                             </div>
                             <span id="scroll-hint" class="text-center">
                                 <i class="fas fa-angle-double-down"></i>
@@ -104,7 +104,7 @@
                                 </div>
                                 <div class="portfolio-info">
                                     <a href="static/img/ourbarehands.png" class="gallery-link">
-                                        <h4>Our Barehands</h4>
+                                        <h4>Our Barehands (Coming soon)</h4>
                                         <p>Mobile Design, Content Strategy</p>
                                     </a>
                                 </div>
@@ -118,7 +118,7 @@
                                     <img src="static/img/huemail.png" title="" alt="">
                                 </div>
                                 <div class="portfolio-info">
-                                    <a href="static/img/huemail.png" class="gallery-link">
+                                    <a href="" class="gallery-link">
                                         <h4>Protected: Enterprised Email Security Features</h4>
                                         <p>UX, Mobile Design, Web Development</p>
                                     </a>
@@ -131,7 +131,7 @@
                                     <img src="static/img/zalora.png" title="" alt="">
                                 </div>
                                 <div class="portfolio-info">
-                                    <a href="static/img/zalora.png" class="gallery-link">
+                                    <a href="static/pages/zalora.html" class="gallery-link">
                                         <h4>ZALORA Design System Library</h4>
                                         <p>Design System, Design Patterns, React, CSS</p>
                                     </a>
@@ -162,6 +162,7 @@
             <div class="footer-top">
                 <div class="container">
                     <div class="footer-about text-center">
+                        <p class="text-white">Feel free to reach out for collaborations or just a friendly hello :)</p>
                         <div class="nav si-dark si-round social-icon si-40 justify-content-center">
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
