--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -37,17 +37,6 @@
                         <img src="../img/logo.svg" alt="Yichang">
                         <span>Yichang</span>
                     </a>
-                    <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
-                        <ul class="nav navbar-nav">
-                            <li><a class="nav-link" href="../pages/studies.html">Case Studies</a></li>
-                            <li><a class="nav-link" href="../pages/about.html">About</a></li>
-                        </ul>
-                    </div>
-                    <div class="extra-menu d-flex align-items-center">
-                        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse-toggle" aria-expanded="false">
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
                 </div>
             </div>
             <!-- End Header Middle -->
@@ -136,7 +125,7 @@
 
                         </div>
                     </div>
-                    <div class="rol justify-content-center">
+                    <div class="row justify-content-center">
                         <div class="col">
                             <img src="../img/docs.png"/>
                         </div>
@@ -334,6 +323,7 @@
             <div class="footer-top">
                 <div class="container">
                     <div class="footer-about text-center">
+                        <p class="text-white">Feel free to reach out for collaborations or just a friendly hello :)</p>
                         <div class="nav si-dark si-round social-icon si-40 justify-content-center">
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
