--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -347,12 +347,12 @@
         <!--bootstrap-->
         <script src="../plugin/bootstrap/js/popper.min.js"></script>
         <script src="../plugin/bootstrap/js/bootstrap.js"></script>
+        <!-- <script src="../plugin/svgxuse/svgxuse.js"></script> -->
         <!--end bootstrap-->
         <!-- End -->
 
         <!-- custom js -->
         <script src="../js/custom.js"></script>
-        <script defer src="https://i.icomoon.io/public/temp/0fb3ad0936/UntitledProject/svgxuse.js"></script>
         <!-- end -->
 
         <!-- end body -->
