--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
-                            <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-no_1"></use></svg>
+                            <svg class="icon theme-color"><use xlink:href="img/symbol-defs.svg#icon-no_1"></use></svg>
                             <h5 class="m-1rem-t">Data-driven Design</h5>
                             <p class="medium-dark-color">
                                 I looked for tracking data in Google Analytics that can be used to inform the design decisions. Based on the raffic from different platforms, we decided to adopt mobile-first approach. We defined the breakpoints for the grid system by referencing the distribution of the screen sizes.
