--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Main -->
         <main>
             <!-- Intro Banner -->
-            <section>
+            <section id="home_brand_statement">
                 <div class="container">
                     <div class="row full-screen align-items-center">
                         <div class="col-lg-12 text-center">
@@ -72,17 +72,30 @@
                             <div class="p-2rem-tb">
                                 <a class="m-btn m-btn-radius m-btn-theme" href="/CV_Yichang.pdf">Download CV</a>
                             </div>
-                            <span id="scroll-hint" class="text-center">
+                            <span class="text-center shake-vertical">
                                 <i class="fas fa-angle-double-down"></i>
                             </span>
                         </div>
                     </div>
                 </div>
+                <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </section>
             <!-- End Intro Banner -->
 
-            <section id="case_study" class="gray-bg">
+            <section id="case_study">
                 <div class="container">
+                    <h2 class="m-5rem-b">Projects</h2>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="portfolio-box-01">
@@ -141,20 +154,6 @@
                     </div>
                 </div>
             </section>
-
-            <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-
         </main>
         <!-- main end -->
         <!-- Footer-->
@@ -164,9 +163,9 @@
                     <div class="footer-about text-center">
                         <p class="text-white">Feel free to reach out for collaborations or just a friendly hello :)</p>
                         <div class="nav si-dark si-round social-icon si-40 justify-content-center">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                            <a href="https://www.instagram.com/ariel.lee/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/liyichang/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.pinterest.com/ariellee812/"><i class="fab fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
