--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </section>
-            <section id="esplanade_project_goal">
+            <section id="esplanade_project_goal" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col">
@@ -76,6 +76,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="esplanade_process" class="hideme">
+                <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col">
                             <h3>The Process</h3>
@@ -86,8 +90,10 @@
                             <img class="m-2rem-t " src="../img/design_process.png"/>
                         </div>
                     </div>
-                    <!-- <img class="m-6rem-t" src="../img/esplanade.png"> -->
-
+                </div>
+            </section>
+            <section id="esplanade_research" class="hideme">
+                <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-6">
                             <h3>User Research</h3>
@@ -130,6 +136,10 @@
                             <img src="../img/docs.png"/>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="esplanade_issue" class="hideme">
+                <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-5">
                             <h3>Issue Prioritisation</h3>
@@ -166,14 +176,15 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="esplanade_ia" class="hideme">
+                <div class="container">
                     <div class="row m-3rem-t">
                         <div class="col-lg-5">
                             <h3>Revised Information Architecture</h3>
                             <div class="m-0rem-t medium-dark-color">To address issue with the navigation, we needed to revise the information architecture of the site.</div>
                         </div>
-                    </div>
-                    <div class="row">
-                        
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-7">
@@ -200,7 +211,8 @@
                     </div>
                 </div>
             </section>
-            <section id="esplanade_project_prototype" class="gray-bg">
+                
+            <section id="esplanade_project_prototype" class="gray-bg hideme">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
@@ -270,7 +282,7 @@
                     </div>
                 </div>
             </section>
-            <section id="esplanade_project_mobile">
+            <section id="esplanade_project_mobile" class="hideme">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
@@ -325,9 +337,9 @@
                     <div class="footer-about text-center">
                         <p class="text-white">Feel free to reach out for collaborations or just a friendly hello :)</p>
                         <div class="nav si-dark si-round social-icon si-40 justify-content-center">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                            <a href="https://www.instagram.com/ariel.lee/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/liyichang/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.pinterest.com/ariellee812/"><i class="fab fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
