--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </section>
-            <section id="zalora_my_role" class="fade_in">
+            <section id="zalora_my_role" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </section>
-            <section id="zalora_process">
+            <section id="zalora_process" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col">
@@ -98,7 +98,7 @@
                 </div>
             </section>
 
-            <section id="zalora_strategy">
+            <section id="zalora_strategy" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-6">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </section>
-            <section id="zalora_iteration">
+            <section id="zalora_iteration" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-5">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </section>
-            <section id="zalora_workshop">
+            <section id="zalora_workshop" class="hideme">
                 <div class="container">
                     <div class="row">
                         <h3>Workshops & Talks</h3>
@@ -188,9 +188,9 @@
                     <div class="footer-about text-center">
                         <p class="text-white">Feel free to reach out for collaborations or just a friendly hello :)</p>
                         <div class="nav si-dark si-round social-icon si-40 justify-content-center">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                            <a href="https://www.instagram.com/ariel.lee/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/liyichang/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.pinterest.com/ariellee812/"><i class="fab fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
