fix grammar error in esplanade case study

--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -48,7 +48,7 @@
             <section id="esplanade_project_overview">
                 <div class="container">
                     <div class="m-3rem-b m-6rem-t">
-                        <h1>Redesigning the esplanade website</h1><br>
+                        <h1>Redesigning the Esplanade website</h1><br>
                         <small>Concept · UI/UX Design</small>
                         <div class="row m-1rem-b m-3rem-t">
                             <div class="col-lg-6">
@@ -61,7 +61,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>Working alongside with 2 teammates, Rina (Product Manager) and Han Loong (User Researcher), our main task was to redesign the Information Architecture (IA) and key pages layout/wireframes of esplanade. We proceeded the project by following the design thinking process.</div>
+                                <div>Working alongside with 2 teammates, Rina (Product Manager) and Han Loong (User Researcher), our main task was to redesign the Information Architecture (IA) and key pages layout/wireframes of Esplanade. We proceeded with the project by following the design thinking process.</div>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                     <div class="row m-6rem-t">
                         <div class="col">
                             <div class="font-italic medium-dark-color text-center">
-                                “<a href="https://www.esplanade.com/">Esplanade</a> is a not-for-profit arts centre, socially motivated by the mission to entertain, engage, educate and inspire communities through the arts. Other than performing venues, the Esplanade also contains retail and meeting venues, as well as other lifestyle and arts related services which contribute a significant percentage to their total annual revenue (40%). ”
+                                “<a href="https://www.esplanade.com/">Esplanade</a> is a not-for-profit arts centre, socially motivated by the mission to entertain, engage, educate, and inspire communities through the arts. Other than performing venues, the Esplanade also contains retail and meeting venues, as well as other lifestyle and arts-related services, which contribute a significant percentage to their total annual revenue (40%). ”
                             </div>
                         </div>
                     </div>
@@ -101,12 +101,12 @@
                         <div class="col-lg-6 m-3rem-t">
                             <h5>What are the contents the website contains?</h5>
                             <p>
-                                We started the project by conducting content inventory to get an overview of the existing contents on the website.
+                                We started the project by conducting a inventory to get an overview of the existing content on the website.
                             </p>
         
                             <h5>User research & Interviews</h5>
                             <p>
-                                Derived from business annual report for Esplanade and the content inventory we came up with 4 in scenarios and tasks. We conducted interviews and usability testing on the original website to see how users navigate to find the tasks and scenarios given. We wanted to understand what are the reasons and objectives of people who use the site? And we also wanted evaluate the heuristics of the website before coming up with a problem statement and hypothesize.
+                                Derived from the annual business report for Esplanade and the content inventory, we came up with 4 in scenarios and tasks. We conducted interviews and usability testing on the original website to see how users navigate to find the tasks and scenarios given. We wanted to understand the reasons and objectives of people who use the site? And we also wanted to evaluate the heuristics of the website before coming up with a problem statement and hypothesize.
                             </p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         <div class="offset-lg-6 col-lg-6">
                             <h5>Audience Groups</h5>
                             <div class="medium-dark-color m-0rem-t">
-                                On synthesizing our user research we could define 2 groups of audience.
+                                On synthesizing our user research, we could define 2 groups of audiences.
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                                             5/6 users had difficulty finding the ‘Visitor Guide’
                                         </li>
                                         <li>
-                                            3/6 users had difficulty locating the ‘Eat & Drink’ menu item 3/6 users were unsure about the difference between ‘What’s On’ and ‘Explore’
+                                            3/6 users had trouble locating the ‘Eat & Drink’ menu item 3/6 users were unsure about the difference between ‘What’s On’ and ‘Explore’
                                         </li>
                                     </ul>
                                 </div>
@@ -162,8 +162,8 @@
                                     <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-no_2"></use></svg>
                                     <h5 class="m-1rem-t">Cluttered and Insufficient Information</h5>
                                     <ul class="medium-dark-color">
-                                        <li>3/6 users was uncertain about the type of food the restaurant serves</li>
-                                        <li>4/6 users were frustrated at having to click on each individual venue page to access basic venue information such as seating capacity</li>
+                                        <li>3/6 users were uncertain about the type of food the restaurant serves</li>
+                                        <li>4/6 users were frustrated at having to click on each venue page to access necessary venue information such as seating capacity</li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-6">
@@ -183,7 +183,7 @@
                     <div class="row m-3rem-t">
                         <div class="col-lg-5">
                             <h3>Revised Information Architecture</h3>
-                            <div class="m-0rem-t medium-dark-color">To address issue with the navigation, we needed to revise the information architecture of the site.</div>
+                            <div class="m-0rem-t medium-dark-color">To address the issue with the navigation, we needed to revise the information architecture of the site.</div>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
@@ -192,19 +192,19 @@
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h6>Card sorting</h6>
-                            <p>We used open card sorting methodology to better understand how users group concepts and label the groups.</p>
+                            <p>We used an open card sorting methodology to understand better how users group concepts and label the groups.</p>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
                         <div class="offset-lg-8 col-lg-4 m-3rem-t">
                             <h6>Tree Testing</h6>
-                            <p>We re-designed the grouping and re-labeled some of the concepts based on the response from card sorting, we conducted a tree testing section to test our revised architecture.</p>
+                            <p>We redesigned the grouping and relabeled some of the concepts based on the response from card sorting. And we conducted a tree testing section to test our revised architecture.</p>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <h1>88%</h1> ends up at the correct answer 
                                 </div>
                                 <div class="col-lg-6">
-                                    <h1>79%</h1> answers chosen without backtracking
+                                    <h1>79%</h1> answers are chosen without backtracking
                                 </div>
                             </div>
                         </div>
@@ -228,15 +228,15 @@
                         <div class="offset-lg-1 col-lg-4">
                             <h5>New Navigation Bar & Mega Menu</h5>
                             <div>
-                                Derived from tree testing result, we reduced the number to categories in the global navigation and relabeled the categories with more intuitive labels.
+                                Derived from tree testing results, we reduced the number to categories in the global navigation and relabeled the categories with more intuitive labels.
                             </div>
                             <br>
                             <div>
-                                With the new single line design, the behavior of the navigation bar is more consistent too. On the original website, user can hover the categories in the second row to trigger the mega menu. But, categories in the first row are not hoverable. And user can only click them to open the corresponding page.
+                                With the new single-line design, the behavior of the navigation bar is more consistent too. On the original website, users can hover the categories in the second row to trigger the mega menu. But, categories in the first row are not hoverable. And user can only click them to open the corresponding page.
                             </div>
                             <br>
                             <div>
-                                During the usability testing on the version 1, 2/5 testers accidentally dismissed the mega menu due to the gap between the maga menu and navigation bar. Thus, in version 2, we removed the gap to provide a smoother experience.
+                                During the usability testing on version 1, 2/5 testers accidentally dismissed the mega menu due to the gap between the mega menu and navigation bar. Thus, in version 2, we removed the gap to provide a smoother experience.
                             </div>
                         </div>
                     </div>
@@ -245,15 +245,15 @@
                         <div class="col-lg-5">
                             <h5>New Card Template</h5>
                             <div>
-                                From the usability testing on the original website, the testers either couldn't find the information buried in the paragraghs of text or they had to click the card one by one and read some basic information in the detail view. 
+                                From the usability testing on the original website, the testers either couldn't find the information buried in the paragraphs of text, or they had to click the card one by one and read some basic information in the detail view. 
                             </div>
                             <br>
                             <div>
-                                The new card design makes the essential information right in front of users, and uses bullet points, and typographic hierarchy to allow readers to quickly scan for information.
+                                The new card design makes essential information right in front of users. It uses bullet points, and typographic hierarchy to make the information more scannable.
                             </div>
                             <br>
                             <div>
-                                Lastly, we also introduced a visual cue to show the card is clickabel.
+                                Lastly, we also introduced a visual cue to show the card is clickable.
                             </div>
                         </div>
                         <div class="offset-lg-1 col-lg-6">
@@ -268,7 +268,7 @@
                         <div class="offset-lg-1 col-lg-4">
                             <h5>New Filters </h5>
                             <div>
-                                Finding events is the most important feature people use the esplanade website for. However, the current filter design doesn't allow user to apply multiple filters, it works more like a two-level navigation. 
+                                Finding events is the most important feature people use the Esplanade website. However, the current filter design doesn't allow users to apply multiple filters. It works more like two-level navigation. 
                             </div>
                             <br>
                             <div>
@@ -276,7 +276,7 @@
                             </div>
                             <br>
                             <div>
-                                Additionally, from the usability testing on the original website, we also noticed that people liked to scroll down and had a overview of the number of results. Thus, we also introduced the result count so that users can adjust the filters to get and proper number of results.
+                                Additionally, from the usability testing on the original website, we also noticed that people liked to scroll down and had an overview of the number of results. Thus, we also introduced the result count so that users can adjust the filters to get and a decent amount of results.
                             </div>
                         </div>
                     </div>
@@ -300,28 +300,26 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <h5>Homepage & Navigation</h5>
-                            <p>We added a easy reach button to the bottom of navigation.</p>
+                            <p>We added an easy reach button to the bottom of the navigation.</p>
                         </div>
                         <div class="col-lg-4">
                             <h5>Quick filters & Back-to-top button</h5>
-                            <p>For events list page, a set of most-used filters is added to the top to allow users to quickly filter the events. Additionally, a back-to-top button was added to allow user to easily browse the content.</p>
+                            <p>For the events list page, a set of most-used filters is added to the top to allow users to filter the events quickly. Additionally, a back-to-top button was added to allow users to browse the content easily.</p>
                         </div>
                         <div class="col-lg-2">
                             <h5>Scrollable tabs</h5>
-                            <p>For pages with secondary navigation, we introduced a scrollable tabs. User can easily swip left and right to switch between tabs.</p>
+                            <p>For pages with secondary navigation, we introduced scrollable tabs. Users can quickly swipe left and right to switch between tabs.</p>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col">
                             <h3>What's Next</h3>
-                            <div>
-                                Moving forward, there are definitely a couple of areas which can be improved on. 
-                                Schools is one of the target customer segments of esplanade. Due the time and resource constraints, we couldn't conduct any research on this customer segment, and thus the school related features are out of the scope for this project.
-                            </div>
-                            <br>
-                            <div>
-                                We would also like to present our solution to esplanade's stakeholders and get their thoughts and feedback on real-world problem situations that we can solve. Creating products that solve real problems with a purpose, will create a sense achievement for me.
-                            </div>
+                            <p>
+                                There are a couple of areas that can be improved. Schools are one of the target customer segments of Esplanade. Due to the time and resource constraints, we couldn't conduct any research on this customer segment, and thus the school-related features are out of the scope for this project.
+                            </p>
+                            <p>
+                                We would also like to present our solution to Esplanade's stakeholders and get their thoughts and feedback on real-world problem situations that we can solve. Creating products that solve real problems with a purpose will generate a sense of achievement for me.
+                            </p>
                         </div>
                     </div>
                 </div>
