remove links of unfinished case study

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                                     <img src="static/img/ourbarehands.png" title="" alt="">
                                 </div>
                                 <div class="portfolio-info">
-                                    <a href="static/img/ourbarehands.png" class="gallery-link">
+                                    <a class="gallery-link">
                                         <h4>Our Barehands (Coming soon)</h4>
                                         <p>Mobile Design, Content Strategy</p>
-                                    </a>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -131,10 +131,10 @@
                                     <img src="static/img/huemail.png" title="" alt="">
                                 </div>
                                 <div class="portfolio-info">
-                                    <a href="" class="gallery-link">
+                                    <a class="gallery-link">
                                         <h4>Protected: Enterprised Email Security Features</h4>
                                         <p>UX, Mobile Design, Web Development</p>
-                                    </a>
+                                    </span>
                                 </div>
                             </div>
                         </div>
