fix typo on homepage

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 Hi, I'm Yichang Li
                             </h5>
                             <div class="display-1">
-                                A experience designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
+                                An experienced designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
                             </div>
                             <div class="p-2rem-tb">
                                 <a class="m-btn m-btn-radius m-btn-theme" href="/CV_Yichang.pdf">Download CV</a>
