update zalora case study

--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>Style is a design system that defines the interaction standards, design patterns and guidelines for all ZALORA products. It was my job to provide aid from development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager), Sheila (UI Designer), Danilel (UX Writer) and Doro (Prodoct Manager) on the project.</div>
+                                <div>Style is a design system that defines the interaction standards, design patterns and guidelines for all ZALORA products. It was my job to provide aid from development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager, Interaction), Eugene (UX Manager, Research), Sheila (UI Designer) and Doro (Prodoct Manager) on the project.</div>
                                 <h6>Deliverables </h6>
                                 <ul>
                                     <li>ZALORA/Style (CSS component library)</li>
