--- a/index.html
+++ b/index.html
@@ -60,24 +60,6 @@
         <main>
             <!-- Intro Banner -->
             <section id="home_brand_statement">
-                <div class="container">
-                    <div class="row full-screen align-items-center">
-                        <div class="col-lg-12 text-center">
-                            <h5>
-                                Hi, I'm Yichang Li
-                            </h5>
-                            <div class="display-1">
-                                An experienced designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
-                            </div>
-                            <div class="p-2rem-tb">
-                                <a class="m-btn m-btn-radius m-btn-theme" href="/CV_Yichang.pdf">Download CV</a>
-                            </div>
-                            <span class="text-center shake-vertical">
-                                <i class="fas fa-angle-double-down"></i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
                 <ul class="circles">
                     <li></li>
                     <li></li>
@@ -90,6 +72,25 @@
                     <li></li>
                     <li></li>
                 </ul>
+                <div class="container">
+                    <div class="row full-screen align-items-center">
+                        <div class="col-lg-12 text-center">
+                            <h5>
+                                Hi, I'm Yichang Li
+                            </h5>
+                            <div class="display-1">
+                                An experienced designer & full stack developer who creates meaningful and delightful solutions through human-centred design.
+                            </div>
+                            <div class="p-2rem-tb">
+                                <a class="m-btn m-btn-radius m-btn-t-theme" href="/CV_Yichang.pdf">Download CV</a>
+                            </div>
+                            <span class="text-center shake-vertical">
+                                <i class="fas fa-angle-double-down"></i>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                
             </section>
             <!-- End Intro Banner -->
 
